Fix single column spacing for product component. Fix spacing issue for search component

--- a/src/styles/6-components/_components.search.scss
+++ b/src/styles/6-components/_components.search.scss
@@ -21,7 +21,7 @@
 
 .overlay {
   background: rgba(255,255,255,.8);
-  padding: rem($global-spacing-unit-lg) 0;
+  padding: rem($global-spacing-unit-lg) rem($global-spacing-unit);
   position: fixed;
   top: 0;
   left: 0;
